@@ -1,5 +1,9 @@
 2004-04-12  Bruno Haible  <bruno@clisp.org>
 
+	* condition.lisp (check-value): Fix typo. Avoid compiler warning.
+
+2004-04-12  Bruno Haible  <bruno@clisp.org>
+
 	* intlog.d (I_I_ash_I): Fix bug when y = most-negative-fixnum = -2^32.
 
 2004-04-11  Bruno Haible  <bruno@clisp.org>
